// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap bootstrap initializes reserves and price 1`] = `199467`;

exports[`Bootstrap bootstrap initializes reserves and price 2`] = `
Object {
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
}
`;

exports[`Bootstrap bootstrap initializes reserves and price 3`] = `
Object {
  "driftBps": "0",
  "priceX96": "79228162514264337593543950336",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "79228162514264337593543950336",
    "sqrtUsdcPerAssetX96": "79228162514264337593543950336",
  },
}
`;

exports[`Bootstrap cannot bootstrap twice (idempotency enforced) 1`] = `199455`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 1`] = `1712436`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 2`] = `1712436`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 3`] = `1712436`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 4`] = `1712436`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 5`] = `222551`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 6`] = `222551`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 7`] = `222191`;

exports[`Bootstrap topology (bootstrap multiple pools) bootstraps four pools with different offsets 8`] = `222191`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 1`] = `1712409`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 2`] = `1712409`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 3`] = `1712409`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 4`] = `1712409`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 5`] = `222539`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 6`] = `222539`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 7`] = `222179`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 8`] = `222179`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 9`] = `
Object {
  "driftBps": "-5000",
  "priceX96": "39614081257132168796771975168",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "56022770974786139918731938227",
    "sqrtUsdcPerAssetX96": "112045541949572279837463876455",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 10`] = `
Object {
  "driftBps": "-4999",
  "priceX96": "39622004073383595230531329563",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "56028372971797771543347444701",
    "sqrtUsdcPerAssetX96": "112034339075780387009293030796",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 11`] = `
Object {
  "driftBps": "4998",
  "priceX96": "118834320955145079956556571108",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "97031051179024554962449645507",
    "sqrtUsdcPerAssetX96": "64691680231365127650143106545",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 12`] = `
Object {
  "driftBps": "5000",
  "priceX96": "118842243771396506390315925504",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "97034285709124592626698884146",
    "sqrtUsdcPerAssetX96": "64689523806083061751132589430",
  },
}
`;

exports[`Offset bounds validation accepts offset at exactly +10000 bps 1`] = `222179`;

exports[`Offset bounds validation accepts offset at exactly -9999 bps (maximum negative that works) 1`] = `222551`;
